--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,24 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<h2>Your Cart</h2>
-<table>
-    <% @cart.line_items.each do |item| %>
-        <tr>
-            <td><%= item.quantity %>&times;</td>
-            <td><%= item.product.title %></td>
-            <td class="item_price"><%= number_to_currency(item.total_price) %></td>
-            <td><%= button_to 'Remove item from cart', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-    <% end %>
-    
-    <% unless @cart.line_items.empty? %>
-        <tr class="total_line">
-            <td colspan="2">Total</td>
-            <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-        </tr>
-    <% else %>
-        <p>Your cart is empty.</p>
-    <% end %>
-</table>
-
-<%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' } unless @cart.line_items.empty? %>
+<%= render @cart %>
