--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,5 +6,10 @@
     <td><%= line_item.quantity %>&times;</td>
     <td><%= line_item.product.title %></td>
     <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
+    <% if @cart.line_items.count == 1 && @cart.line_items.last.quantity == 1 %>
+        <td><%= button_to 'Decrement', decrement_line_item_path(line_item), method: :put %></td>
+    <% else %>
+        <td><%= button_to 'Decrement', decrement_line_item_path(line_item), method: :put, remote: true %></td>
+    <% end %>
     <td><%= button_to 'Remove from cart', line_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
